[project]
name = "uvlpy"
version = "0.1.0"
description = "UV abused for your pleasure"
readme = "README.md"
license = "BSD-3-Clause"
classifiers = [
    "Programming Language :: Python :: 3",
]
keywords = ["constraint", "solver", "uv"]
authors = [
    { name = "Vasyl Bodnar", email = "vasylbodnar@outlook.com" }
]
requires-python = ">=3.10"
dependencies = []

[project.urls]
Homepage = ""
